@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.3702 2009/09/16 02:18:31 reed Exp $
+$NetBSD: CHANGES-2009,v 1.3703 2009/09/16 02:25:34 reed Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -4841,3 +4841,4 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated x11/xfce4-panel to 4.6.1 [reed 2009-09-16]
 	Updated x11/xfce4-session to 4.6.1 [reed 2009-09-16]
 	Updated x11/xfce4-utils to 4.6.1 [reed 2009-09-16]
+	Update time/xfce4-datetime-plugin to 0.6.1 [reed 2009-09-16]
